adding widget areas and passing theme check

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Awesome Co
+Theme Name: Awesome 0915
 Theme URI: https://github.com/melissacabral/awesomeco
 Description: A theme for learning!
 Author: melissa cabral
